fixes: subscription menu visibility and removed cancel button from edit subscription modal

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -688,6 +688,7 @@ input[type="checkbox"].acc-checkbox:checked:after {
   background: #ffffff;
   padding: 0px;
   border-radius: 6px;
+  z-index: 1;
 }
 .more-dp-info ul {
   margin-bottom: 0px;
